# riff-mcp

./: .env.example  .gitignore  .mcp.example.json  LIVE_VERIFICATION.md  MCP_DESIGN.md  README.md  pyproject.toml
prompts/: example_batch.txt  example_batch.yaml  example_image_batch.txt  example_image_batch.yaml  seedance_test_espresso.md  smoke_image.txt
src/gemini_video_prompts/: cli.py
src/gemini_video_prompts_mcp/: __init__.py  __main__.py  replicate_min.py  seedance.py  server.py
src/media_analysis_mcp/: __init__.py  __main__.py  ffmpeg_utils.py  gemini_media.py  prompts.py  schemas.py  server.py
src/riff_mcp_doctor/: __init__.py  doctor.py
tests/: test_doctor.py  test_generate_video_contract.py  test_media_analysis_analyze_video.py  test_media_analysis_image_tools.py
