[project]
name = "gemini-video-prompts"
version = "0.1.0"
description = "Batch Gemini video generation from text or YAML prompt files."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-genai>=1.47.0",
    "PyYAML>=6.0.2",
    "python-dotenv>=1.0.1",
]

[project.scripts]
gemini-video-prompts = "gemini_video_prompts.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gemini_video_prompts"]

[tool.hatch.build.targets.sdist]
include = [
  "src/gemini_video_prompts",
  "pyproject.toml",
  "README.md",
  ".env.example",
  "prompts",
]
